@@ -39,17 +39,17 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = 'couchdb-python'
-copyright = '2010, Dirkjan Ochtman'
+project = 'couchbase-mapping-python'
+copyright = '2013, HDmessaging'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '0.8'
+version = '0.1'
 # The full version, including alpha/beta/rc tags.
-release = '0.8'
+release = '0.1.0-beta'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
